--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" ng-app="tipot">
 
   <head>
-    <!-- Google Fonts -->
+    <!-- Google Fonts and Font Awesome-->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'> 
     <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
@@ -24,7 +25,7 @@
 
     <div id="layout" ng-cloak ng-controller="layoutCtrl">
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -33,7 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Emaps</a>
+                <a class="navbar-brand" href="#"><i class="fa fa-bars"></i></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
